20090831 Makefile.am: Win32: Fixed building the main resource file and made
	 sure it is rebuilt if any of the included resource files are rebuilt
	 (Marek).
20090831 windres.rc: Win32: Added version information to the executable
	 (Marek).
20090902 sound/coreaudiosound.c: add missing header and clean up some format
         warnings (Fred).
20090902 configure.in: apparently AC_TRY_COMPILE should just have the body of
         the function, which is placed inside main() (Fred).
20090902 z80/z80.c: NMI is intended to advance time (Fred).
20090902 display.c: remove unused variable start in copy_critical_region_line
         (Fred).
20090902 rzx.c: rzx_sentinel is intended to reduce tstates by
         RZX_SENTINEL_TIME_REDUCE (Fred).
20090902 tape.c: remove unused variable block from tape_play (Fred).
20090902 debugger/disassemble.c,printer.c: reduce GCC 4.2 string format warnings
         (Fred).
20090902 ui/win32/{options.pl,options-{resource,header}.pl}: Win32: Implemented
	 comboboxes in options dialogs (Marek).
20090903 disk/disk.c: remove a couple of unneeded settings of bpt (Fred).
20090903 ui/gtk/picture.c: use a compat_fd rather than an int (Fred).
20090903 debugger/{command.c,debugger_internals.h}: we put a size_t argument in
         the result argument of debugger_command_input rather than an int
         (Fred).
20090903 ui/win32/picture.c: use a compat_fd rather than an int (Fred).
20090916 README: change reference to CVS to be Subversion (Fred).
20091006 ui/uijoystick.c: only send a joystick button event if there has been
         an actual change in button state since last poll in the libjsw code
         (fixes bug #2863656) (thanks, Phil Reynolds) (Fred).
20091007 settings.pl: numeric settings don't need to be non-zero to save into
         the settings file (fixes bug #2873277) (thanks, Phil Reynolds) (Fred).
20091016 fuse.1: update link to ResiDOS homepage in fuse man page (patch
         #2875612) (Gergely Szasz).
